# AI-Outdoor-Agent-Platform-Based-on-STM32MP157-STM32F407ZG

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md
f407/sensor-hub/: CMakeLists.txt  README.md
f407/sensor-hub/firmware/: CMakeLists.txt
f407/sensor-hub/firmware/app/: sensor_hub_app.c  sensor_hub_app.h
f407/sensor-hub/firmware/bsp/: board_i2c.c  board_i2c.h  board_icm42688_gpio.c  board_icm42688_gpio.h  board_tick.c  board_tick.h  board_uart.c  board_uart.h  uart_tx_queue_c.c  uart_tx_queue_c.h
f407/sensor-hub/firmware/cmake/: arm-none-eabi-gcc.cmake
f407/sensor-hub/firmware/linker/: STM32F407ZGTx_FLASH.ld
f407/sensor-hub/firmware/platform/: syscalls.c
f407/sensor-hub/firmware/protocol/: crc16_modbus_c.c  crc16_modbus_c.h  mcu_command_decoder_c.c  mcu_command_decoder_c.h  mcu_frame_builder_c.c  mcu_frame_builder_c.h
f407/sensor-hub/firmware/sensors/: barometer_sample_c.h  bmp390_provider_c.c  bmp390_provider_c.h  icm42688_fifo_parser_c.c  icm42688_fifo_parser_c.h  icm42688_provider_c.c  icm42688_provider_c.h  imu_sample_c.h  imu_timestamp_normalizer_c.c  imu_timestamp_normalizer_c.h  magnetometer_sample_c.h  mmc5603_provider_c.c  mmc5603_provider_c.h  mock_imu_provider_c.c  mock_imu_provider_c.h  sensor_sample_filter_c.c  sensor_sample_filter_c.h
f407/sensor-hub/firmware/startup/: startup_stm32f407xx.c
f407/sensor-hub/firmware/stm32cube/: atk_f407_sensorhub.ioc
f407/sensor-hub/firmware/stm32cube/Core/Inc/: i2c.h  (+4 more)
f407/sensor-hub/include/drivers/: icm42688_driver.h
f407/sensor-hub/include/protocol/: mcu_frame_builder.h
f407/sensor-hub/include/sensors/: mock_imu_provider.h
f407/sensor-hub/src/drivers/: icm42688_driver.cpp
f407/sensor-hub/src/protocol/: mcu_frame_builder.cpp
f407/sensor-hub/src/sensors/: mock_imu_provider.cpp
f407/sensor-hub/tests/: icm42688_fifo_parser_test.cpp  icm42688_provider_test.cpp  mcu_frame_builder_test.cpp  mmc5603_provider_test.cpp  mock_imu_provider_test.cpp  sensor_sample_filter_test.cpp  test_check.h  uart_tx_queue_test.cpp
mp157/outdoor-core-service/: CMakeLists.txt  README.md
mp157/outdoor-core-service/config/: outdoor_agent_app.conf  outdoor_agent_service.conf  runtime.conf
mp157/outdoor-core-service/data/: mcu_mock_frames.txt  mcu_mock_frames_compass.txt  mcu_mock_frames_valid.txt  nmea_edge_cases.txt  nmea_sample.txt
mp157/outdoor-core-service/deploy/systemd/: outdoor-agent-icm20608.service  outdoor-agent-runtime.service
mp157/outdoor-core-service/include/agent/: agent_response_serializer.h  agent_types.h  i_agent_backend.h  local_agent_service.h  mock_agent_backend.h
mp157/outdoor-core-service/include/config/: app_config.h  config_loader.h
mp157/outdoor-core-service/include/gnss/: gnss_fix.h  gnss_status.h  nmea_parser.h
mp157/outdoor-core-service/include/input/: file_replay_input.h  i_input_source.h
mp157/outdoor-core-service/include/ipc/: status_publisher.h  unix_status_client.h  unix_status_service.h
mp157/outdoor-core-service/include/log/: logger.h
mp157/outdoor-core-service/include/mcu/: imu_payload_parser.h  mcu_command.h  mcu_frame.h  mcu_frame_parser.h  mcu_frame_stream_decoder.h  mcu_protocol.h  mcu_status.h
mp157/outdoor-core-service/include/navigation/: compass_estimator.h
mp157/outdoor-core-service/include/runtime/: i_service.h  runtime_manager.h  runtime_status.h
mp157/outdoor-core-service/include/sensors/: board_imu_status.h  icm20608_char_reader.h  icm20608_iio_reader.h
mp157/outdoor-core-service/include/services/: dashboard_service.h  gnss_replay_service.h  gnss_serial_service.h  icm20608_service.h  mcu_mock_service.h  mcu_serial_service.h
mp157/outdoor-core-service/include/storage/: history_recorder.h
mp157/outdoor-core-service/scripts/: audit_board_long_validation.sh  monitor_board_runtime_health.sh  run_board_crash_recovery_validation.sh  run_board_gnss_fix_validation.sh  run_board_health_preflight.sh  run_board_long_validation.sh  run_outdoor_agent_app.sh  run_stage2_board_acceptance.sh  verify_runtime.ps1  verify_runtime_supervision.ps1  verify_runtime_supervision_tests.ps1  verify_stage2_board_acceptance.ps1  verify_stage2_board_acceptance_tests.ps1
mp157/outdoor-core-service/src/: agent_terminal_main.cpp  main.cpp  status_query_main.cpp
mp157/outdoor-core-service/src/agent/: agent_response_serializer.cpp  local_agent_service.cpp  mock_agent_backend.cpp
mp157/outdoor-core-service/src/config/: config_loader.cpp
mp157/outdoor-core-service/src/gnss/: gnss_status.cpp  nmea_parser.cpp
mp157/outdoor-core-service/src/ipc/: status_publisher.cpp  unix_status_client.cpp  unix_status_service.cpp
mp157/outdoor-core-service/src/log/: logger.cpp
mp157/outdoor-core-service/src/mcu/: imu_payload_parser.cpp  mcu_command.cpp  mcu_frame_parser.cpp  mcu_frame_stream_decoder.cpp  mcu_protocol.cpp  mcu_status.cpp
mp157/outdoor-core-service/src/navigation/: compass_estimator.cpp
mp157/outdoor-core-service/src/runtime/: runtime_manager.cpp  runtime_status.cpp
mp157/outdoor-core-service/src/sensors/: icm20608_char_reader.cpp  icm20608_iio_reader.cpp
mp157/outdoor-core-service/src/services/: dashboard_service.cpp  gnss_replay_service.cpp  gnss_serial_service.cpp  icm20608_service.cpp  mcu_mock_service.cpp  mcu_serial_service.cpp
mp157/outdoor-core-service/src/storage/: history_recorder.cpp
mp157/outdoor-core-service/tests/: compass_estimator_tests.cpp  history_recorder_tests.cpp  icm20608_char_reader_tests.cpp  icm20608_iio_reader_tests.cpp  local_agent_service_tests.cpp  logger_tests.cpp  mcu_frame_stream_decoder_tests.cpp  mcu_protocol_tests.cpp  nmea_parser_tests.cpp  runtime_manager_tests.cpp  status_publisher_tests.cpp  unix_status_service_tests.cpp
tools/compass_calibrator/: CMakeLists.txt  README.md
tools/compass_calibrator/include/calibration/: compass_calibrator.h
tools/compass_calibrator/src/: compass_calibrator.cpp  main.cpp
tools/compass_calibrator/tests/: compass_calibrator_test.cpp
tools/compass_calibrator/tests/data/: magnetometer_sphere.csv
tools/frame_decoder/: CMakeLists.txt
tools/frame_decoder/src/: main.cpp
(+81 files in other folders)
